fix unsupportedoperation exception and ensure the continuity after recording an error